Fix: Invisible Avatars fix

--- a/styles.css
+++ b/styles.css
@@ -25,5 +25,5 @@
   z-index: 1;
 }
 .hidden-video {
-    display: none !important;
-  }
+    visibility: hidden !important;
+}
